package app.gate;
import "hero.proto";

//通用响应，无参数
message CommonResponse
{
    required bool result = 1;
    optional string message = 2;
}

//请求武将列表
message HeroListResponse
{
    required bool result = 1;
    repeated HeroPB heros = 2;
}

//武将升级
message HeroUpgradeResponse
{
    required bool result = 1;
    optional int32 level = 2;
    optional int32 exp = 3;
}

//武将献祭
message HeroSacrificeResponse
{
    required bool result = 1;
    optional int32 hero_soul = 2;
    optional int32 exp_item_no = 3;
    optional int32 exp_item_num = 4;
}

